--- a/GameData/WildBlueIndustries/Pathfinder/GoldStrikeResources.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/GoldStrikeResources.cfg
@@ -11,6 +11,18 @@ RESOURCE_DEFINITION
 	volume = 1
 }
 
+@PART[PotatoRoid]
+{
+	MODULE
+	{
+		name = ModuleAsteroidResource
+		resourceName = Aurum
+		presenceChance = 10
+		lowRange = 50
+		highRange = 75
+	}
+}
+
 //Each GOLDSTRIKE node tells Gold Strike what valueable resource is available as a lode, how much is available in a given area, and how much to increase the amount when striking it rich. You can easily add other GOLDSTRIKE config nodes.
 
 GOLDSTRIKE
@@ -88,64 +100,15 @@ STORAGE_TEMPLATE
 }
 
 //Stock drill patches so that they too can convert Ore into a GOLDSTRIKE resource.
-@PART[RadialDrill]
+@PART[RadialDrill,MiniDrill]
 {
-	MODULE
+	@MODULE[ModuleResourceHarvester]
 	{
-		name = WBIGoldStrikeConverter
-		ConverterName = GoldStrike
-		StartActionName = Start Lode Harvest
-		StopActionName = Stop Harvesting Lode
-		ToggleActionName = Start/Stop Lode Harvest
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ConverterSkill
-		 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 1.5
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 15
-		}
+		@name = WBIGoldStrikeDrill
 	}
-}
 
-@PART[MiniDrill]
-{
-	MODULE
+	@MODULE[ModuleAsteroidDrill]
 	{
-		name = WBIGoldStrikeConverter
-		ConverterName = GoldStrike
-		StartActionName = Start Lode Harvest
-		StopActionName = Stop Harvesting Lode
-		ToggleActionName = Start/Stop Lode Harvest
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ConverterSkill
-		 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 0.3
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3
-		}
+		@name = WBIGoldStrikeAsteroidDrill
 	}
 }
