--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Drills.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Drills.cfg
@@ -1,5 +1,10 @@
 @PART[*]:HAS[@MODULE[ModuleResourceHarvester,!WBIDrillSwitcher]]
 {
+	@MODULE[ModuleResourceHarvester]
+	{
+		@name = WBIGoldStrikeDrill
+	}
+
 	MODULE
 	{
 		name = WBIDrillSwitcher
@@ -17,5 +22,13 @@
 	MODULE
 	{
 		name = WBIDrilOpsView
+	}
+}
+
+@PART[*]:HAS[@MODULE[ModuleAsteroidDrill]]
+{
+	@MODULE[ModuleAstroidDrill]
+	{
+		@Name = WBIAsteroidDrill
 	}
 }
