--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -82,7 +82,17 @@
 
 @PART[KKAOSS_Science_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures]
 {
-	!MODULE[WBISciLabOpsView]{}
+	@MODULE[ModuleScienceConverter]
+	{
+		@name = WBIScienceConverter
+	}
+
+	MODULE
+	{
+		name = ModuleQualityControl
+		quality = 50
+		mtbf = 900
+	}
 
 	MODULE
 	{
@@ -146,6 +156,13 @@
 {
 	MODULE
 	{
+		name = ModuleQualityControl
+		quality = 50
+		mtbf = 900
+	}
+
+	MODULE
+	{
 		name = WBIMultipurposeHab
 		enableLogging = True
 
@@ -197,6 +214,13 @@
 @PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,SnacksUtils]
 {
 	!MODULE[PlanetaryGreenhouse]{}
+
+	MODULE
+	{
+		name = ModuleQualityControl
+		quality = 50
+		mtbf = 900
+	}
 
 	MODULE
 	{
