--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Skills.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Skills.cfg
@@ -1,4 +1,4 @@
-@PART[*]:NEEDS[Pathfinder]:HAS[!MODULE[KerbalEVA]]
+@PART[*]:NEEDS[Pathfinder]:HAS[!MODULE[KerbalEVA],!MODULE[ModuleAsteroid]]
 {
 	MODULE
 	{
