--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -203,6 +203,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleQualityControl
+		quality = 50
+		mtbf = 720
+	}
+
+	MODULE
+	{
 		name = WBIMultipurposeHab
 		enableLogging = True
 
