--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -118,8 +118,14 @@ PART
 
 	MODULE:NEEDS[KIS]
 	{
-		name = ModuleKISItem
+		name = ModuleKISItemEvaTweaker
 		volumeOverride = 975
+		carriable = true
+		equipPos = (0,-0.1,-0.15)
+		equipMode = part
+		equipSlot = jetpack
+		equipMeshName = jetpack_base01
+		equipBoneName = bn_jetpack01
 		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
