--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -153,6 +153,16 @@ PATH_HABITATION
 		name = WBIPathfinderLab
 	}
 
+	//Prospect for valuable resources
+	MODULE
+	{
+		name = WBIGoldStrike
+		showDebugLog = true
+		showGUI = true
+		prospectChance = 40
+		lodeStrikeSound = WildBlueIndustries/Pathfinder/Sounds/wereInTheMoney
+	}
+
 	//Separates the biome's resources from Ore.
 	MODULE
 	{
