--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -34,12 +34,7 @@ PART
 
 	MODULE
 	{
-		name = ModuleOverheatDisplay
-	}
-
-	MODULE
-	{
-		name = ModuleResourceHarvester
+		name = WBIGoldStrikeDrill
 		HarvesterType = 0
 		Efficiency = 0.3
 		ResourceName = Ore
@@ -55,34 +50,14 @@ PART
 		SpecialistBonusBase = 0.05
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		GeneratesHeat = true
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3
-		}
-		TemperatureModifier
-		{
-			key = 0 10000
-			key = 250 5000
-			key = 500 2500
-			key = 750 250
-			key = 1000 0
-		}		
-		ThermalEfficiency 
-		{
-			key = 0 0.1
-			key = 250 .1
-			key = 500 1
-			key = 750 .1
-			key = 1000 0
-		}
+		GeneratesHeat = false
 	}
 
 	MODULE
 	{
-		name = ModuleAsteroidDrill
+		name = WBIGoldStrikeAsteroidDrill
 		DirectAttach = false
+		ConverterName = Asteroid Drill
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
 		ToggleActionName = Toggle Asteroid Harvester
@@ -91,56 +66,7 @@ PART
 		ImpactRange = 1.5
 		ImpactTransform = ImpactTransform
 		AutoShutdown = true
-		GeneratesHeat = true
-		TemperatureModifier
-		{
-			key = 0 10000
-			key = 250 5000
-			key = 500 2500
-			key = 750 250
-			key = 1000 0
-		}		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ScienceSkill
-		EfficiencyBonus = 1
-		ThermalEfficiency 
-		{
-			key = 0 0.1
-			key = 250 .1
-			key = 500 1
-			key = 750 .1
-			key = 1000 0
-		}
-	}
-
-	MODULE
-	{
-		name = WBIGoldStrikeConverter
-		ConverterName = GoldStrike
-		StartActionName = Start Lode Harvest
-		StopActionName = Stop Harvesting Lode
-		ToggleActionName = Start/Stop Lode Harvest
-		AutoShutdown = false
 		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ConverterSkill
-		 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 0.3
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3
-		}
 	}
 
 	MODULE
@@ -168,24 +94,6 @@ PART
 		moduleType = Drill
 	}	
 	
-	MODULE
-	{
-		name = ModuleCoreHeat
-		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
-		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
-		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
-		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
-		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
-		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
-		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
-		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
-		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
-		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
-		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
-		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
-	}
-
 	MODULE
 	{
 		name = WBIModuleCoreSample
