--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -107,8 +107,14 @@ PART
 
 	MODULE:NEEDS[KIS]
 	{
-		name = ModuleKISItem
+		name = ModuleKISItemEvaTweaker
 		volumeOverride = 975
+		equipPos = (0,-0.1,-0.15)
+		carriable = true
+		equipMode = part
+		equipSlot = jetpack
+		equipMeshName = jetpack_base01
+		equipBoneName = bn_jetpack01
 		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
