--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/BuffaloDrill.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/BuffaloDrill.cfg
@@ -50,6 +50,12 @@ PART
 		ImpactRange = 6
 		AutoShutdown = true
 		GeneratesHeat = false
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 9
+		}
 	}
 
 	MODULE
@@ -67,6 +73,12 @@ PART
 		UseSpecialistBonus = true
 		AutoShutdown = true
 		GeneratesHeat = false
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 9
+		}
 	}
 
 	MODULE:NEEDS[BARIS]
