--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -51,6 +51,12 @@ PART
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
 		GeneratesHeat = false
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 3
+		}
 	}
 
 	MODULE
@@ -67,6 +73,12 @@ PART
 		ImpactTransform = ImpactTransform
 		AutoShutdown = true
 		GeneratesHeat = false
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 3
+		}
 	}
 
 	MODULE:NEEDS[BARIS]
