--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Common/Blacksmith.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Common/Blacksmith.cfg
@@ -74,7 +74,7 @@ PATH_HABITATION
 		INPUT_RESOURCE
 		{
 			ResourceName = Equipment
-			Ratio = 0.1
+			Ratio = 0.01
 		}
 
 		INPUT_RESOURCE
@@ -86,10 +86,45 @@ PATH_HABITATION
 		OUTPUT_RESOURCE
 		{
 			ResourceName = MaterialKits
-			Ratio = 0.25
+			Ratio = 0.025
 			DumpExcess = false
 		}
 	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Equipment Printer
+		StartActionName = Start Equipment Printer
+		StopActionName = Stop Equipment Printer
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = MaterialKits
+			Ratio = 0.025
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 10
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Equipment
+			Ratio = 0.01
+			DumpExcess = false
+		}
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
@@ -103,6 +138,14 @@ PATH_HABITATION
 		name = MaterialKits
 		amount = 1000
 		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Equipment
+		amount = 500
+		maxAmount = 500
 		isTweakable = true
 	}
 
