--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -463,3 +463,112 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 		isTweakable = true
 	}
 }
+
+@PART[wbiHogan,wbiRanchHouse]:NEEDS[TacLifeSupport]
+{
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 15
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = CarbonDioxide
+			Ratio = 0.00014
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.00000357
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Waste
+			Ratio = 0.000001
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = WasteWater
+			Ratio = 0.000001
+			DumpExcess = true
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 0.000115
+			DumpExcess = true
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Food
+			Ratio = 0.00014
+		}
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = CarbonDioxide
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = WasteWater
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Food
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Waste
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+}
