--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/RanchHouse/ranchHouse.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/RanchHouse/ranchHouse.cfg
@@ -69,7 +69,7 @@ PART
 	TechRequired = composites
 	entryCost = 3800
 	cost = 800
-	category = Payload
+	category = Utility
 	subcategory = 0
 	title = Ranch House
 	manufacturer = Wild Blue Industries
