--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -154,7 +154,13 @@ PART
 		evaStrutPos = (0.05, 0.059, -0.21)
 		evaStrutRot = (190.0, 0.0, 0.0)
 		tubeTexPath = KAS/Textures/pipe
-}
+	}
+
+	MODULE
+	{
+		name = WBIAirParkController
+	}
+
 	RESOURCE
 	{
 		name = ElectricCharge
