--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -26,9 +26,9 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
+	node_attach = 0, 0, 0, 0, -1, 0, 1
+	node_stack_mount = 0, 0, 0, 0, 1, 0, 1
+	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
 
 	// --- editor parameters ---
 	TechRequired = advConstruction
