--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Common/Clockworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Common/Clockworks.cfg
@@ -75,7 +75,7 @@ PATH_INDUSTRY
 		INPUT_RESOURCE
 		{
 			ResourceName = Equipment
-			Ratio = 1
+			Ratio = 0.1
 		}
 
 		INPUT_RESOURCE
@@ -87,7 +87,41 @@ PATH_INDUSTRY
 		OUTPUT_RESOURCE
 		{
 			ResourceName = MaterialKits
-			Ratio = 2.5
+			Ratio = 0.25
+			DumpExcess = false
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Equipment Recycler
+		StartActionName = Start Equipment Recycler
+		StopActionName = Stop Equipment Recycler
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = MaterialKits
+			Ratio = 0.25
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 10
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Equipment
+			Ratio = 0.1
 			DumpExcess = false
 		}
 	}
