--- a/GameData/WildBlueIndustries/Buffalo/Parts/FuelTank/Tundra200.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/FuelTank/Tundra200.cfg
@@ -75,7 +75,7 @@ PART
 		defaultTemplate = LFO
 
 		//name of the template nodes to use
-		templateNodes = STORAGE_TEMPLATE
+		templateNodes = TUNDRA;STORAGE_TEMPLATE
 		resourcesToKeep = ElectricCharge
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
