--- a/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/BrewWorks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/BrewWorks.cfg
@@ -211,6 +211,53 @@ PATH_INDUSTRY
 
 	MODULE
 	{
+		name = ModuleBreakableConverter
+		ConverterName = Konkrete
+		StartActionName = Start Konkrete
+		StopActionName = Stop Konkrete
+		AutoShutdown = true
+
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Water
+			Ratio = 0.5
+			FlowMode = STAGE_PRIORITY_FLOW
+  		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Minerals
+			Ratio = 0.1
+			FlowMode = STAGE_PRIORITY_FLOW
+  		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Slag
+			Ratio = 0.1
+			FlowMode = STAGE_PRIORITY_FLOW
+  		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 30
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = Konkrete
+			Ratio = 0.25
+			DumpExcess = false
+			FlowMode = STAGE_PRIORITY_FLOW
+		 }
+	}
+
+	MODULE
+	{
 		name = WBIEfficiencyMonitor
 		efficiencyType = industry
 		harvestType = 0
