--- a/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/Nukeworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/Nukeworks.cfg
@@ -115,7 +115,8 @@ PATH_INDUSTRY
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Explodium
+			ResourceName:NEEDS[!FarFutureTechnologies] = Explodium
+			ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
 			Ratio = 1
 		}
 
@@ -174,7 +175,8 @@ PATH_INDUSTRY
 
 		OUTPUT_RESOURCE
 		{
-			ResourceName = Explodium
+			ResourceName:NEEDS[!FarFutureTechnologies] = Explodium
+			ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
 			Ratio = 1
 			DumpExcess = false
 		}
