--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -94,14 +94,14 @@
 	RESOURCE
 	{
 		name = Waste
-		amount = 500
+		amount = 0
 		maxAmount = 500
 	}
 
 	RESOURCE
 	{
 		name = WasteWater
-		amount = 500
+		amount = 0
 		maxAmount = 500
 	}
 
@@ -193,7 +193,7 @@
 	RESOURCE
 	{
 		name = CarbonDioxide
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -209,7 +209,7 @@
 	RESOURCE
 	{
 		name = WasteWater
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -225,7 +225,7 @@
 	RESOURCE
 	{
 		name = Waste
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -317,7 +317,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = CarbonDioxide
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -333,7 +333,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = WasteWater
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -349,7 +349,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = Waste
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -426,7 +426,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = CarbonDioxide
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -442,7 +442,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = WasteWater
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -458,7 +458,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = Waste
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -535,7 +535,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = CarbonDioxide
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -551,7 +551,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = WasteWater
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -567,8 +567,59 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 	RESOURCE
 	{
 		name = Waste
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
+		isTweakable = true
+	}
+}
+
+@PART[WBI_Ponderosa,WBI_Ponderosa2,WBI_DocSciLab,WBI_Hacienda]:NEEDS[TacLifeSupport]
+{
+	RESOURCE
+	{
+		name = Food
+		amount = 17.6
+		maxAmount = 17.6
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 11.68
+		maxAmount = 11.68
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 1766
+		maxAmount = 1766
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Waste
+		amount = 0
+		maxAmount = 17.6
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = WasteWater
+		amount = 0
+		maxAmount = 11.68
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = CarbonDioxide
+		amount = 0
+		maxAmount = 1766
 		isTweakable = true
 	}
 }
