--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize1.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize1.cfg
@@ -65,7 +65,8 @@ PART
 		AutoShutdown = true
 		Efficiency = 1.0
 		EfficiencyBonus = 1
-		ResourceName = Explodium
+		ResourceName:NEEDS[!FarFutureTechnologies] = Explodium
+		ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
 		ConverterName = Explodium Filter
 		StartActionName = Start Explodium Filter
 		StopActionName = Stop Explodium Filter
