--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/RanchHouse/ranchHouse.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/RanchHouse/ranchHouse.cfg
@@ -194,7 +194,7 @@ PART
 		fieldReconfigurable = false
 
 		//name of the template nodes to use
-		templateNodes = PACKING_BOX;RANCH_HOUSE
+		templateNodes = RANCH_HOUSE
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -252,11 +252,14 @@ RANCH_HOUSE
 	author = Angel-125
 	name = RanchHouse
 	description = The Ranch House is more than just a large community center. It not only has a large greenhouse, it also provides production bonuses to all converters and drills on the base. Even better, it generates science data that can be processed in labs, used to improve the chances of finding a GoldStrike node while prospecting, and used to calculate launch trajectories for Pipeline mass drivers. The more kerbals residing in the Ranch House, the greater the data produced.
-	mass = 50
-	requiredResource = Equipment
-	requiredAmount = 20000
 	reconfigureSkill = ConverterSkill
 	isKISInventory = True
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Equipment
+		Ratio = 20000
+	}
 
 	MODULE
 	{
