--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
@@ -178,8 +178,11 @@ RANGELAND
 	author = Angel-125
 	name = Rangeland
 	description = This extraplanetary launchpad is a great alternative to survey stakes.
-	mass = 5
-	requiredResource = Equipment
-	requiredAmount = 2000
 	reconfigureSkill = ConverterSkill
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Equipment
+		Ratio = 2000
+	}
 }
