--- a/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/MM_Snacks.cfg
@@ -134,7 +134,7 @@
 	RESOURCE
 	{
 		name = Ore
-		amount = 500
+		amount = 0
 		maxAmount = 500
 		isTweakable = false
 	}
@@ -142,7 +142,7 @@
 	RESOURCE
 	{
 		name = Minerals
-		amount = 500
+		amount = 0
 		maxAmount = 500
 		isTweakable = false
 	}
@@ -150,7 +150,7 @@
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 500
+		amount = 0
 		maxAmount = 500
 		isTweakable = false
 	}
@@ -158,7 +158,7 @@
 	RESOURCE
 	{
 		name = Soil
-		amount = 500
+		amount = 0
 		maxAmount = 500
 		isTweakable = false
 	}
@@ -218,7 +218,7 @@
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -226,7 +226,7 @@
 	RESOURCE
 	{
 		name = Water
-		amount = 1000
+		amount = 0
 		maxAmount = 1000
 		isTweakable = true
 	}
@@ -286,7 +286,7 @@
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 4000
+		amount = 0
 		maxAmount = 4000
 		isTweakable = true
 	}
@@ -294,7 +294,7 @@
 	RESOURCE
 	{
 		name = Water
-		amount = 4000
+		amount = 0
 		maxAmount = 4000
 		isTweakable = true
 	}
@@ -450,7 +450,7 @@
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 4000
+		amount = 0
 		maxAmount = 4000
 		isTweakable = true
 	}
@@ -458,8 +458,15 @@
 	RESOURCE
 	{
 		name = Water
-		amount = 4000
+		amount = 0
 		maxAmount = 4000
 		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name= Snacks
+		amount = 0
+		maxAmount = 6400
 	}
 }
