--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
@@ -45,46 +45,79 @@ PART
 
 	MODULE
 	{
-		name = ModuleResourceIntake
-		resourceName = Atmosphere
-		checkForOxygen = false
-		area = 0.001
-		intakeSpeed = 10
-		intakeTransformName = Intake
-	}
-
-//Resource types:  
-//	0 = Crustal			(Stuff you dig up)
-//	1 = Oceanic			(Stuff in the oceans)
-//	2 = Atmospheric		(Stuff in the air, varies with pressure)
-//	3 = Interplanetary	(Stuff you find between planets)
-	MODULE
-	{
 		name = ModuleResourceHarvester
-		HarvesterType = 1 //Oceanic
+		HarvesterType = 2 //Atmospheric
 		AutoShutdown = true
-		Efficiency = 1.0
-		EfficiencyBonus = 1
-		ResourceName:NEEDS[!FarFutureTechnologies] = Explodium
-		ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
-		ConverterName = Explodium Filter
-		StartActionName = Start Explodium Filter
-		StopActionName = Stop Explodium Filter
-		ToggleActionName = Start/Stop Explodium Filter
+		ResourceName = Atmosphere
+		ConverterName = Atmosphere Scoop
+		StartActionName = Open Atmosphere Scoop
+		StopActionName = Close Atmosphere Scoop
+		ToggleActionName = Toggle Atmosphere Scoop
 		intakeTransformName = Intake
 		intakeSpeed = 10
 		airStaticSpeed = 10
+		AlwaysActive = true
+	}
+
+	MODULE
+	{
+		name = ModuleResourceIntake
+		resourceName = IntakeLqd
+		checkForOxygen = false
+		area = 0.001
+		intakeSpeed = 10
+		underwaterOnly = true
+		intakeTransformName = Intake
+	}
+
+	MODULE
+	{
+		name = WBIProspector
+		ConverterName = Atmosphere Processor
+		StartActionName = Start Atmosphere Processor
+		StopActionName = Stop Atmosphere Processor
+		AutoShutdown = false
+		GeneratesHeat = false
+		guiVisible = true
+		harvestTypes = Atmospheric
+		outputsGuiName = Show Processor Outputs
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Atmosphere
+			Ratio = 0.1
+		}		
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 0.75
-		}
-		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = DrillSkill
+			Ratio = 5
+		}		
+	}
+
+	MODULE
+	{
+		name = WBIProspector
+		ConverterName = Liquid Distiller
+		StartActionName = Start Liquid Distiller
+		StopActionName = Stop Liquid Distiller
+		AutoShutdown = false
+		GeneratesHeat = false
+		guiVisible = true
+		harvestTypes = Oceanic
+		outputsGuiName = Show Distiller Outputs
+
+		INPUT_RESOURCE
+		{
+			ResourceName = IntakeLqd
+			Ratio = 0.1
+		}		
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 5
+		}		
 	}
 
 	MODULE
@@ -265,6 +298,13 @@ PART
 	RESOURCE
 	{
 		name = Atmosphere
+		amount = 1
+		maxAmount = 1
+	}
+
+	RESOURCE
+	{
+		name = IntakeLqd
 		amount = 1
 		maxAmount = 1
 	}
