--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize3.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize3.cfg
@@ -1,27 +1,27 @@
 PART
 {
-	name = wbiLassoSize1
+	name = wbiLassoSize3
 	module = Part
 	author = Angel-125
 	MODEL
 	{
-		model = WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize1
+		model = WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize3
 	}
 	rescaleFactor = 1
 
-	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
+	node_stack_bottom = 0, 0, 0, 0, -1, 0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
-	TechRequired = aerodynamicSystems
+	TechRequired = heavyAerodynamics
 	entryCost = 24000
-	cost = 1000
+	cost = 16000
 	category = Aero
 	subcategory = 0
-	title = Lasso-100 Aero/Hydro Scoop
+	title = Lasso-300 Aero/Hydro/Exo Scoop
 	manufacturer = Wild Blue Industries
-	description = Not your typical turbofan intake, the Lasso can separate atmospheric gasses and oceanic liquids into useful resources.
+	description = Not your typical turbofan intake, the Lasso can separate atmospheric gasses and oceanic liquids into useful resources. Unlike the smaller versions, this version also has the ability to scoop up exo-atmospheric gasses as well.
 	attachRules = 1,1,0,1,0
-	mass = 0.4
+	mass = 3.2
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -38,8 +38,8 @@ PART
 		name = ModuleResourceIntake
 		resourceName = IntakeAir
 		checkForOxygen = true
-		area = 0.0075
-		intakeSpeed = 10
+		area = 0.06
+		intakeSpeed = 60
 		intakeTransformName = Intake
 	}
 
@@ -54,9 +54,29 @@ PART
 		StopActionName = Close Atmosphere Scoop
 		ToggleActionName = Toggle Atmosphere Scoop
 		intakeTransformName = Intake
-		intakeSpeed = 10
-		airStaticSpeed = 10
+		intakeSpeed = 60
+		airStaticSpeed = 60
 		AlwaysActive = true
+	}
+
+	MODULE
+	{
+		name = ModuleResourceHarvester
+		HarvesterType = 3 //Exo
+		AutoShutdown = true
+		Efficiency = 0.02
+		ResourceName = Atmosphere
+		ConverterName = Exosphere Scoop
+		StartActionName = Start Exospheric Scoop
+		StopActionName = Stop Exospheric Scoop
+		ToggleActionName = Toggle Exosphere Scoop
+		AlwaysActive = true
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 60
+		}
 	}
 
 	MODULE
@@ -64,8 +84,8 @@ PART
 		name = ModuleResourceIntake
 		resourceName = IntakeLqd
 		checkForOxygen = false
-		area = 0.0075
-		intakeSpeed = 10
+		area = 0.06
+		intakeSpeed = 60
 		underwaterOnly = true
 		intakeTransformName = Intake
 	}
@@ -79,7 +99,7 @@ PART
 		AutoShutdown = false
 		GeneratesHeat = false
 		guiVisible = true
-		harvestTypes = Atmospheric
+		harvestTypes = Atmospheric;Exospheric
 		outputsGuiName = Show Processor Outputs
 
 		INPUT_RESOURCE
@@ -118,6 +138,15 @@ PART
 			ResourceName = ElectricCharge
 			Ratio = 5
 		}		
+	}
+
+	MODULE
+	{
+		name = ModuleResourceScanner
+		MaxAbundanceAltitude = 5000000
+		RequiresUnlock = true
+		ScannerType = 3
+		ResourceName = Atmosphere
 	}
 
 	MODULE
@@ -290,21 +319,22 @@ PART
 	RESOURCE
 	{
 		name = IntakeAir
-		amount = 2
-		maxAmount = 2
+		amount = 20
+		maxAmount = 20
 	}
+
 
 	RESOURCE
 	{
 		name = Atmosphere
-		amount = 2
-		maxAmount = 2
+		amount = 20
+		maxAmount = 20
 	}
 
 	RESOURCE
 	{
 		name = IntakeLqd
-		amount = 2
-		maxAmount = 2
+		amount = 20
+		maxAmount = 20
 	}
 }
