--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -139,10 +139,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Inflate
+		startEventGUIName = Assemble
 
 		//GUI name of retract animation
-		endEventGUIName = Deflate
+		endEventGUIName = Disassemble
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
