--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -85,10 +85,10 @@ PART
 		flightAnimationOnly = True
 
 		//GUI name of deploy animation
-		startEventGUIName = Inflate
+		startEventGUIName = Assemble
 
 		//GUI name of retract animation
-		endEventGUIName = Deflate
+		endEventGUIName = Disassemble
 
 		//Determines if the module allows in-field reconfiguring
 		fieldReconfigurable = True
