--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
@@ -100,9 +100,9 @@ PART
 	{
 		name = WBICoolingTower
 		animationName = Deploy
-		startEventGUIName = Inflate
-		endEventGUIName = Deflate
-		actionGUIName = Toggle Inflation
+		startEventGUIName = Assemble
+		endEventGUIName = Disassemble
+		actionGUIName = Toggle Assembly
 		isInflatable = True
 	}
 
