--- a/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/Lasso.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/CRP/Lasso.cfg
@@ -1,44 +1,5 @@
-@PART[LassoSize0]
+@PART[wbiLassoSize0]
 {
-	MODULE
-	{
-		name = ModuleResourceIntake
-		resourceName = IntakeLqd
-		checkForOxygen = false
-		area = 0.001
-		intakeSpeed = 10
-		underwaterOnly = true
-		intakeTransformName = Intake
-	}
-
-	MODULE
-	{
-		name = ModuleResourceHarvester
-		HarvesterType = 1 //Oceanic
-		AutoShutdown = true
-		Efficiency = 0.5
-		EfficiencyBonus = 1
-		ResourceName = Water
-		ConverterName = Water Filter
-		StartActionName = Start Water Filter
-		StopActionName = Stop Water Filter
-		ToggleActionName = Start/Stop Water Filter
-		intakeTransformName = Intake
-		intakeSpeed = 10
-		airStaticSpeed = 10
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 1.5
-		}
-		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = DrillSkill
-	}
-
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -74,56 +35,10 @@
 			DumpExcess = false
 		}
 	}
-
-	RESOURCE
-	{
-		name = IntakeLqd
-		amount = 1
-		maxAmount = 1
-	}
 }
 
-@PART[LassoSize1]
+@PART[wbiLassoSize1]
 {
-	MODULE
-	{
-		name = ModuleResourceIntake
-		resourceName = IntakeLqd
-		checkForOxygen = false
-		area = 0.0075
-		intakeSpeed = 10
-		underwaterOnly = true
-		intakeTransformName = Intake
-	}
-
-	MODULE
-	{
-		name = ModuleResourceHarvester
-		HarvesterType = 1 //Oceanic
-		AutoShutdown = true
-		Efficiency = 1.0
-		EfficiencyBonus = 1
-		ResourceName = Water
-		ConverterName = Water Filter
-		StartActionName = Start Water Filter
-		StopActionName = Stop Water Filter
-		ToggleActionName = Start/Stop Water Filter
-		intakeTransformName = Intake
-		intakeSpeed = 10
-		airStaticSpeed = 10
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 1.5
-		}
-		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = DrillSkill
-	}
-
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -158,56 +73,10 @@
 			DumpExcess = false
 		}
 	}
-
-	RESOURCE
-	{
-		name = IntakeLqd
-		amount = 2
-		maxAmount = 2
-	}
 }
 
-@PART[LassoSize2]
+@PART[wbiLassoSize2]
 {
-	MODULE
-	{
-		name = ModuleResourceIntake
-		resourceName = IntakeLqd
-		checkForOxygen = false
-		area = 0.03
-		intakeSpeed = 10
-		underwaterOnly = true
-		intakeTransformName = Intake
-	}
-
-	MODULE
-	{
-		name = ModuleResourceHarvester
-		HarvesterType = 1 //Oceanic
-		AutoShutdown = true
-		Efficiency = 1.0
-		EfficiencyBonus = 1
-		ResourceName = Water
-		ConverterName = Water Filter
-		StartActionName = Start Water Filter
-		StopActionName = Stop Water Filter
-		ToggleActionName = Start/Stop Water Filter
-		intakeTransformName = Intake
-		intakeSpeed = 30
-		airStaticSpeed = 30
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3
-		}
-		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = DrillSkill
-	}
-
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -242,11 +111,42 @@
 			DumpExcess = false
 		}
 	}
+}
 
-	RESOURCE
+@PART[wbiLassoSize3]
+{
+	MODULE
 	{
-		name = IntakeLqd
-		amount = 4
-		maxAmount = 4
+		name = ModuleResourceConverter
+		ConverterName = Oxygen Compressor
+		StartActionName = Start Oxygen Compressor
+		StopActionName = Stop Oxygen Compressor
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1.2
+
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = IntakeAir
+			Ratio = 2
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 6
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 200
+			DumpExcess = false
+		}
 	}
 }
