--- a/GameData/WildBlueIndustries/001KerbalActuators/SampleArm/SampleArm.cfg
+++ b/GameData/WildBlueIndustries/001KerbalActuators/SampleArm/SampleArm.cfg
@@ -19,7 +19,7 @@ PART
 	rescaleFactor = 1
 	MODEL
 	{
-		model = WildBlueIndustries/KerbalActuators/SampleArm/kanadarm
+		model = WildBlueIndustries/001KerbalActuators/SampleArm/kanadarm
 	}
 
 	// --- node definitions ---
@@ -55,7 +55,28 @@ PART
 
 	MODULE
 	{
+		name = WBILightController
+		servoName = Effector Light
+		lightName = spotlight
+		useAnimationDim = false
+		lightBrightenSpeed = 2.5
+		lightDimSpeed = 2.5
+		resourceAmount = 0.04
+		animationName = 
+		useResources = false
+	}
+
+	MODULE
+	{
 		name = WBIMagnetController
+		debugMode = true
+		magnetTransformName = magnetTransform
+		groupID = Arm
+		ecPerSec = 1.0
+
+		attachEffectName = attachMagnet
+		detachEffectName = detachMagnet
+		runningEffectName = runningMagnet
 	}
 
 	MODULE
@@ -64,7 +85,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Rotate Hand
+		servoName = Rotate Hand
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -85,6 +106,10 @@ PART
 
 		//How fast to rotate the pivot
 		rotationDegPerSec = 15
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	MODULE
@@ -93,7 +118,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Yaw Wrist
+		servoName = Yaw Wrist
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -140,6 +165,10 @@ PART
 
 		//Name of the rotate to neutral button (only applies if gui buttons are visible)
 		rotateNeutralName = Elevate To Neutral
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	MODULE
@@ -148,7 +177,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Pitch Wrist
+		servoName = Pitch Wrist
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -195,6 +224,10 @@ PART
 
 		//Name of the rotate to neutral button (only applies if gui buttons are visible)
 		rotateNeutralName = Elevate To Neutral
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	MODULE
@@ -203,7 +236,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Pitch Elbow
+		servoName = Pitch Elbow
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -250,6 +283,10 @@ PART
 
 		//Name of the rotate to neutral button (only applies if gui buttons are visible)
 		rotateNeutralName = Elevate To Neutral
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	MODULE
@@ -258,7 +295,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Pitch Shoulder
+		servoName = Pitch Shoulder
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -309,6 +346,10 @@ PART
 
 		//Name of the rotate to neutral button (only applies if gui buttons are visible)
 		rotateNeutralName = Elevate To Neutral
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	MODULE
@@ -317,7 +358,7 @@ PART
 		name = WBIRotationController
 
 		//(Optional, defaults to Actuator) User-friendly name of the rotation controller.
-		rotatorName = Rotate Shoulder
+		servoName = Rotate Shoulder
 
 		//(Optional, defaults to Engine) Group ID for the actuator. Allows you to differentiate
 		//between the VTOL manager (which uses the Engine group), and, say, a robot arm manager.
@@ -338,6 +379,10 @@ PART
 
 		//How fast to rotate the pivot
 		rotationDegPerSec = 15
+
+		//Effect to play when a servo is running
+		//Primarily used when manually moving the servo.
+		runningEffectName = runningServo
 	}
 
 	//Put this module LAST in the list of rotation controllers and such.
@@ -345,5 +390,60 @@ PART
 	MODULE
 	{
 		name = WBIServoManager
+
+		//Effect to play when a servo is running
+		runningEffectName = runningServo
+	}
+
+	EFFECTS
+	{
+		attachMagnet
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/elev_start
+				volume = 1.0
+				pitch = 1.0
+				loop = false
+			}
+		}
+
+		detachMagnet
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = Squad/Sounds/sound_click_tock
+				volume = 1.0
+				pitch = 1.0
+				loop = false
+			}
+		}
+		runningMagnet
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = WildBlueIndustries/001KerbalActuators/Sounds/MagnetRunning
+				volume = 0.0 0.0
+				volume = 1.0 0.1
+				pitch = 0.0 0.0
+				pitch = 1.0 1.5
+				loop = true
+			}
+		}
+		runningServo
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = WildBlueIndustries/001KerbalActuators/Sounds/ServoLoop
+				volume = 0.0 0.0
+				volume = 1.0 10.0
+				pitch = 1.0 1.0
+				loop = true
+			}
+		}
 	}
 }
