--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -7,7 +7,7 @@ PART
 	MODEL
 	{
 		model = Squad/Parts/Resources/RadialDrill/TriBitDrill
-		texture =TriBitDrill, WildBlueIndustries/Pathfinder/Assets/GoldDigger
+//		texture = TriBitDrill, WildBlueIndustries/Pathfinder/Assets/GoldDigger
 		scale = .25,.25,.25
 	}
 	rescaleFactor = 1
