--- a/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCS5Way2.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCS5Way2.cfg
@@ -37,7 +37,7 @@ PART
 	subcategory = 0
 	title = Mk2 5-Way RCS Thruster
 	manufacturer = Wild Blue Industries
-	description = This 5-way RCS thruster also has a built-in monopropellant engine that delivers a small amount of thrust. It also has probe core functionality for VTOL flights.
+	description = This 5-way RCS thruster also has a built-in monopropellant engine that delivers a small amount of thrust. It also has a jump jet engine for VTOL flights.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,1,1
