--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland/Rangeland.cfg
@@ -167,6 +167,11 @@ MODULE
 		modifiedConductionFactor = 0.003
 		convectionFluxThreshold = 3000
 	}
+
+	MODULE
+	{
+		name = WBIRangelandHeat
+	}
 }
 
 @PART[KIS_ContainerMount1]:NEEDS[KIS]
