--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -105,7 +105,7 @@ PART
 		defaultTemplate = LFO
 
 		//name of the template nodes to use
-		templateNodes = GREENHOUSE;STORAGE_TEMPLATE
+		templateNodes = GREENHOUSE;STORAGE_TEMPLATE;PATH_POWER
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
