--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -182,7 +182,7 @@ PART
 		defaultTemplate = Bootstrap
 
 		//name of the template nodes to use
-		templateNodes = CONESTOGA;STORAGE_TEMPLATE
+		templateNodes = CONESTOGA;STORAGE_TEMPLATE;PATH_POWER
 
 		//Determines if the module allows in-field reconfiguring
 		fieldReconfigurable = True
