--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -79,12 +79,12 @@ PART
 		StartActionName = Start Ore
 		StopActionName = Stop Ore
 		ImpactTransform = ImpactTransform
-		ImpactRange = 5
+		ImpactRange = 15
 		AutoShutdown = true
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		GeneratesHeat = false
 	}
