--- a/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/OmniWorks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/OmniWorks.cfg
@@ -11,7 +11,7 @@ PATH_INDUSTRY
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/Omni
 	toolTip = Don't like letting converters sit idle? With the OmniWorks, now you can set up the exact converters that you want!
 	toolTipTitle = Your First OmniWorks
-	templateTags = orbitalWorkshop;industry
+	templateTags = orbitalWorkshop
 
 	MODULE
 	{
@@ -157,7 +157,13 @@ PATH_INDUSTRY
 		name = WBIOmniStorage
 
 		//In liters, how much can the part store.
-		storageVolume = 4000
+		//Note: this is a standard size for a switcher capacity of 1.0 and based on
+		//the Titan 1800 fuel tank standard (on which the templates were originally based).
+		//Actual volume depends upon switcher's capacityFactor.
+		storageVolume = 1000
+
+		//Adjust storage volume to account for resource switcher's capacity factor.
+		accountForSwitcherCapacity = true
 
 		//Skill required to reconfigure the container.
 		reconfigureSkill = ConverterSkill
@@ -170,9 +176,5 @@ PATH_INDUSTRY
 
 		//Amount of the required resource to reconfigure the container.
 		requiredAmount = 0
-
-		//Blacklisted resources that can't be added to the container.
-		//Separate by semicolon. Below is the default.
-		resourceBlacklist = GeoEnergy;ElectroPlasma;CoreHeat;Atmosphere;CompressedAtmosphere;LabTime;ExposureTime;ScopeTime;SolarReports;SimulatorTime;GravityWaves;IntakeLqd;IntakeAir;StaticCharge;EVA Propellant;Plants
 	}
 }
