--- a/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
@@ -113,6 +113,43 @@ PART
 			}
 		}
 
+		runningJumpJet2
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_smokeTrail_aeroSpike
+				transformName = smokePoint
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.25
+				speed = 1.0 1.0
+				localOffset = 0, 0, 1
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/LES_Thruster
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+			}
+		}
+
 		power_open
 		{
 			AUDIO
@@ -136,6 +173,30 @@ PART
 				emission = 1.0 1.25
 				speed = 0.0 0.5
 				speed = 1.0 1.2
+			}
+		}
+
+		power_open2
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.05 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustFlame_yellow_tiny_Z
+				transformName = FXTransform
+				emission = 0.0 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
 			}
 		}
 
@@ -222,7 +283,7 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 32
+		maxThrust = 16.0
 		heatProduction = 133
 		fxOffset = 0, 0, 0
 		EngineType = MonoProp
@@ -265,6 +326,74 @@ PART
 					key = 1 120
 					key = 7 0.001	
 				}
+			}
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleEnginesFX
+		engineID = JumpJet LFO
+		runningEffectName = runningJumpJet2
+		powerEffectName = power_open2
+		thrustVectorTransformName = thrustTransform
+		exhaustDamage = True
+		ignitionThreshold = 0.1
+		minThrust = 0
+		maxThrust = 16.0
+		heatProduction = 133
+		fxOffset = 0, 0, 0
+		EngineType = LiquidFuel
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 0.9
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 1.1
+			DrawGauge = False
+		}
+
+		atmosphereCurve
+		{
+			key = 0 355
+			key = 1 120
+			key = 4 0.001
+		}
+
+		moduleIsEnabled = false
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = WBIJumpJetUpgrade2
+				techRequired__ = advScienceTech
+				description__ = Monopropellant/LFO dual mode enabled.
+				moduleIsEnabled = true
+			}
+		}
+	}
+
+	MODULE
+	{
+		name = MultiModeEngine
+		primaryEngineID = JumpJet
+		secondaryEngineID = JumpJet LFO
+		autoSwitch = False
+		moduleIsEnabled = false
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = WBIJumpJetUpgrade2
+				techRequired__ = advScienceTech
+				description__ = Monopropellant/LFO dual mode enabled.
+				moduleIsEnabled = true
 			}
 		}
 	}
