--- a/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/OmniLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/OmniLab.cfg
@@ -120,7 +120,13 @@ PATH_SCIENCE
 		name = WBIOmniStorage
 
 		//In liters, how much can the part store.
-		storageVolume = 3000
+		//Note: this is a standard size for a switcher capacity of 1.0 and based on
+		//the Titan 1800 fuel tank standard (on which the templates were originally based).
+		//Actual volume depends upon switcher's capacityFactor.
+		storageVolume = 500
+
+		//Adjust storage volume to account for resource switcher's capacity factor.
+		accountForSwitcherCapacity = true
 
 		//Skill required to reconfigure the container.
 		reconfigureSkill = ConverterSkill
@@ -133,9 +139,5 @@ PATH_SCIENCE
 
 		//Amount of the required resource to reconfigure the container.
 		requiredAmount = 0
-
-		//Blacklisted resources that can't be added to the container.
-		//Separate by semicolon. Below is the default.
-		resourceBlacklist = GeoEnergy;ElectroPlasma;CoreHeat;Atmosphere;CompressedAtmosphere;LabTime;ExposureTime;ScopeTime;SolarReports;SimulatorTime;GravityWaves;IntakeLqd;IntakeAir;StaticCharge;EVA Propellant;Plants
 	}
 }
