Fix EPL workshop module name

--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
@@ -195,7 +195,7 @@
 {
 	MODULE
 	{
-		name = ExWorkshop
+		name = ELWorkshop
 		ProductivityFactor = 0.2
 	}
 }
@@ -204,7 +204,7 @@
 {
 	MODULE
 	{
-		name = ExWorkshop
+		name = ELWorkshop
 		ProductivityFactor = 0.3
 	}
 }
@@ -213,7 +213,7 @@
 {
 	MODULE
 	{
-		name = ExWorkshop
+		name = ELWorkshop
 		ProductivityFactor = 0.3
 	}
 }
@@ -222,7 +222,7 @@
 {
 	MODULE
 	{
-		name = ExWorkshop
+		name = ELWorkshop
 		ProductivityFactor = 5
 	}
 }
@@ -231,7 +231,7 @@
 {
 	MODULE
 	{
-		name = ExWorkshop
+		name = ELWorkshop
 		ProductivityFactor = 5
 	}
 }
