Extraplanetary Launchpad module updates

--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -38,7 +38,7 @@ PART
 	subcategory = 0
 	title = Spyglass Survey Module
 	manufacturer = Wild Blue Industries
-	description = Officially, the Spyglass was created to monitor the creation of new vessels. Unofficially, it makes sure that kerbals aren’t slacking at your off-world bases. Fortunately, the video camera is easily hacked to show whatever is convenient for base personnel. The Spyglass requires an area demarked by Survey Stakes to serve as a construction area.
+	description = Officially, the Spyglass was created to monitor the creation of new vessels. Unofficially, it makes sure that kerbals arenâ€™t slacking at your off-world bases. Fortunately, the video camera is easily hacked to show whatever is convenient for base personnel. The Spyglass requires an area demarked by Survey Stakes to serve as a construction area.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,0,1
@@ -80,7 +80,7 @@ PART
 
 	MODULE:NEEDS[ExtraplanetaryLaunchpads]
 	{
-		name = ExSurveyStation
+		name = ELSurveyStation
 	}
 
 	MODULE
